--- a/Code/NBA.ipynb
+++ b/Code/NBA.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 25,
    "id": "promising-recipe",
    "metadata": {},
    "outputs": [
@@ -307,10 +307,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-24 15:16:02,643 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2021-06-24 15:16:02,644 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:16:02,645 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2021-06-24 15:16:02,645 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2021-06-25 05:41:35,097 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-25 05:41:35,098 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:41:35,100 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-25 05:41:35,100 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     }
    ],
@@ -322,7 +322,7 @@
     "WrkSet = pd.read_pickle('WorkingSet')\n",
     "\n",
     "# instantiating engine\n",
-    "engine = create_engine('sqlite:///NBA.db', echo=True)\n",
+    "engine = create_engine('sqlite:///NBASTATS.db', echo=True)\n",
     "\n",
     "# establishing connection to SQLite\n",
     "sqlite_connection = engine.connect()"
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 26,
    "id": "divine-correspondence",
    "metadata": {},
    "outputs": [
@@ -338,11 +338,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-24 15:16:09,978 INFO sqlalchemy.engine.base.Engine PRAGMA main.table_info(\"AdvStats\")\n",
-      "2021-06-24 15:16:09,979 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:16:09,980 INFO sqlalchemy.engine.base.Engine PRAGMA temp.table_info(\"AdvStats\")\n",
-      "2021-06-24 15:16:09,981 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:16:09,995 INFO sqlalchemy.engine.base.Engine \n",
+      "2021-06-25 05:41:46,462 INFO sqlalchemy.engine.base.Engine PRAGMA main.table_info(\"AdvStats\")\n",
+      "2021-06-25 05:41:46,463 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:41:46,465 INFO sqlalchemy.engine.base.Engine PRAGMA temp.table_info(\"AdvStats\")\n",
+      "2021-06-25 05:41:46,466 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:41:46,471 INFO sqlalchemy.engine.base.Engine \n",
       "CREATE TABLE \"AdvStats\" (\n",
       "\tlevel_0 TEXT, \n",
       "\tlevel_1 TEXT, \n",
@@ -375,20 +375,20 @@
       ")\n",
       "\n",
       "\n",
-      "2021-06-24 15:16:09,996 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:16:09,998 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:16:09,999 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStats_level_0\" ON \"AdvStats\" (level_0)\n",
-      "2021-06-24 15:16:09,999 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:16:10,001 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:16:10,002 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStats_level_1\" ON \"AdvStats\" (level_1)\n",
-      "2021-06-24 15:16:10,003 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:16:10,004 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:16:10,026 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
-      "2021-06-24 15:16:10,100 INFO sqlalchemy.engine.base.Engine INSERT INTO \"AdvStats\" (level_0, level_1, \"Age\", \"Team\", \"League\", \"POS\", \"G\", \"MP\", \"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"BLK%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\", \"OBPM\", \"DBPM\", \"BPM\", \"VORP\") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
-      "2021-06-24 15:16:10,101 INFO sqlalchemy.engine.base.Engine (('Alaa Abdelnaby', '1990-91', 22, 'POR', 'NBA', 'PF', 43, 290, 13.1, 0.499, 0.0, 0.379, 10.4, 23.4, 17.0, 5.8, 0.7, 2.5, 14.0, 22.1, 0.0, 0.5, 0.5, 0.079, -3.4, -1.2, -4.6, -0.2), ('Alaa Abdelnaby', '1991-92', 23, 'POR', 'NBA', 'PF', 71, 934, 13.5, 0.533, 0.0, 0.28, 9.5, 20.9, 15.2, 4.7, 1.3, 1.1, 14.0, 20.6, 0.6, 1.5, 2.1, 0.11, -2.3, -0.4, -2.6, -0.1), ('Alaa Abdelnaby', '1992-93', 24, 'TOT', 'NBA', 'PF', 75, 1311, 13.2, 0.551, 0.002, 0.245, 11.0, 18.1, 14.6, 3.0, 1.0, 1.2, 15.6, 20.5, 0.7, 1.3, 2.0, 0.074, -2.4, -1.5, -3.9, -0.6), ('Alaa Abdelnaby', '1992-93', 24, 'MIL', 'NBA', 'PF', 12, 159, 11.9, 0.508, 0.018, 0.286, 8.6, 18.3, 13.4, 9.5, 1.9, 1.6, 17.1, 20.5, 0.0, 0.2, 0.1, 0.035, -3.3, -0.2, -3.5, -0.1), ('Alaa Abdelnaby', '1992-93', 24, 'BOS', 'NBA', 'PF', 63, 1152, 13.4, 0.557, 0.0, 0.24, 11.3, 18.1, 14.8, 2.2, 0.8, 1.2, 15.4, 20.5, 0.7, 1.2, 1.9, 0.079, -2.3, -1.7, -4.0, -0.6), ('Alaa Abdelnaby', '1993-94', 25, 'BOS', 'NBA', 'PF', 13, 159, 9.2, 0.485, 0.0, 0.455, 8.5, 24.2, 16.3, 2.7, 0.6, 1.2, 20.5, 22.6, -0.2, 0.1, -0.1, -0.032, -5.3, -2.2, -7.4, -0.2), ('Alaa Abdelnaby', '1994-95', 26, 'TOT', 'NBA', 'PF', 54, 506, 12.6, 0.519, 0.009, 0.152, 8.7, 17.4, 13.1, 5.0, 1.5, 1.8, 15.4, 25.6, -0.4, 0.7, 0.3, 0.027, -4.4, 0.1, -4.3, -0.3), ('Alaa Abdelnaby', '1994-95', 26, 'SAC', 'NBA', 'PF', 51, 476, 14.1, 0.54, 0.009, 0.159, 8.5, 17.3, 13.0, 5.3, 1.6, 1.9, 14.5, 25.7, -0.1, 0.7, 0.6, 0.058, -3.6, 0.5, -3.1, -0.1)  ... displaying 10 of 3352 total bound parameter sets ...  ('Mickey Davis', '1975-76', 25, 'MIL', 'NBA', 'SF', 45, 411, 12.7, 0.445, 0.0, 0.414, 6.5, 14.5, 10.6, 12.2, 1.5, 0.3, 0.0, 0.0, 0.0, 0.3, 0.3, 0.036, -1.6, -1.0, -2.6, -0.1), ('Mickey Davis', '1976-77', 26, 'MIL', 'NBA', 'SF', 19, 165, 16.8, 0.513, 0.0, 0.368, 6.9, 11.4, 9.1, 16.1, 1.6, 1.2, 0.0, 0.0, 0.3, 0.1, 0.4, 0.102, 0.1, -0.3, -0.3, 0.2))\n",
-      "2021-06-24 15:16:10,123 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:16:10,127 INFO sqlalchemy.engine.base.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
-      "2021-06-24 15:16:10,127 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2021-06-25 05:41:46,471 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:41:46,473 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:41:46,474 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStats_level_0\" ON \"AdvStats\" (level_0)\n",
+      "2021-06-25 05:41:46,475 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:41:46,477 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:41:46,478 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStats_level_1\" ON \"AdvStats\" (level_1)\n",
+      "2021-06-25 05:41:46,479 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:41:46,481 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:41:46,501 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-25 05:41:46,573 INFO sqlalchemy.engine.base.Engine INSERT INTO \"AdvStats\" (level_0, level_1, \"Age\", \"Team\", \"League\", \"POS\", \"G\", \"MP\", \"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"BLK%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\", \"OBPM\", \"DBPM\", \"BPM\", \"VORP\") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2021-06-25 05:41:46,573 INFO sqlalchemy.engine.base.Engine (('Alaa Abdelnaby', '1990-91', 22, 'POR', 'NBA', 'PF', 43, 290, 13.1, 0.499, 0.0, 0.379, 10.4, 23.4, 17.0, 5.8, 0.7, 2.5, 14.0, 22.1, 0.0, 0.5, 0.5, 0.079, -3.4, -1.2, -4.6, -0.2), ('Alaa Abdelnaby', '1991-92', 23, 'POR', 'NBA', 'PF', 71, 934, 13.5, 0.533, 0.0, 0.28, 9.5, 20.9, 15.2, 4.7, 1.3, 1.1, 14.0, 20.6, 0.6, 1.5, 2.1, 0.11, -2.3, -0.4, -2.6, -0.1), ('Alaa Abdelnaby', '1992-93', 24, 'TOT', 'NBA', 'PF', 75, 1311, 13.2, 0.551, 0.002, 0.245, 11.0, 18.1, 14.6, 3.0, 1.0, 1.2, 15.6, 20.5, 0.7, 1.3, 2.0, 0.074, -2.4, -1.5, -3.9, -0.6), ('Alaa Abdelnaby', '1992-93', 24, 'MIL', 'NBA', 'PF', 12, 159, 11.9, 0.508, 0.018, 0.286, 8.6, 18.3, 13.4, 9.5, 1.9, 1.6, 17.1, 20.5, 0.0, 0.2, 0.1, 0.035, -3.3, -0.2, -3.5, -0.1), ('Alaa Abdelnaby', '1992-93', 24, 'BOS', 'NBA', 'PF', 63, 1152, 13.4, 0.557, 0.0, 0.24, 11.3, 18.1, 14.8, 2.2, 0.8, 1.2, 15.4, 20.5, 0.7, 1.2, 1.9, 0.079, -2.3, -1.7, -4.0, -0.6), ('Alaa Abdelnaby', '1993-94', 25, 'BOS', 'NBA', 'PF', 13, 159, 9.2, 0.485, 0.0, 0.455, 8.5, 24.2, 16.3, 2.7, 0.6, 1.2, 20.5, 22.6, -0.2, 0.1, -0.1, -0.032, -5.3, -2.2, -7.4, -0.2), ('Alaa Abdelnaby', '1994-95', 26, 'TOT', 'NBA', 'PF', 54, 506, 12.6, 0.519, 0.009, 0.152, 8.7, 17.4, 13.1, 5.0, 1.5, 1.8, 15.4, 25.6, -0.4, 0.7, 0.3, 0.027, -4.4, 0.1, -4.3, -0.3), ('Alaa Abdelnaby', '1994-95', 26, 'SAC', 'NBA', 'PF', 51, 476, 14.1, 0.54, 0.009, 0.159, 8.5, 17.3, 13.0, 5.3, 1.6, 1.9, 14.5, 25.7, -0.1, 0.7, 0.6, 0.058, -3.6, 0.5, -3.1, -0.1)  ... displaying 10 of 3352 total bound parameter sets ...  ('Mickey Davis', '1975-76', 25, 'MIL', 'NBA', 'SF', 45, 411, 12.7, 0.445, 0.0, 0.414, 6.5, 14.5, 10.6, 12.2, 1.5, 0.3, 0.0, 0.0, 0.0, 0.3, 0.3, 0.036, -1.6, -1.0, -2.6, -0.1), ('Mickey Davis', '1976-77', 26, 'MIL', 'NBA', 'SF', 19, 165, 16.8, 0.513, 0.0, 0.368, 6.9, 11.4, 9.1, 16.1, 1.6, 1.2, 0.0, 0.0, 0.3, 0.1, 0.4, 0.102, 0.1, -0.3, -0.3, 0.2))\n",
+      "2021-06-25 05:41:46,593 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:41:46,597 INFO sqlalchemy.engine.base.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2021-06-25 05:41:46,597 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     }
    ],
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 653,
+   "execution_count": 24,
    "id": "fuzzy-dress",
    "metadata": {},
    "outputs": [],
