--- a/Code/WNBA.ipynb
+++ b/Code/WNBA.ipynb
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "external-chest",
    "metadata": {},
    "outputs": [
@@ -624,10 +624,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-24 15:23:35,074 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
-      "2021-06-24 15:23:35,076 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:23:35,077 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
-      "2021-06-24 15:23:35,078 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2021-06-25 05:45:17,291 INFO sqlalchemy.engine.base.Engine SELECT CAST('test plain returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-25 05:45:17,292 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:45:17,293 INFO sqlalchemy.engine.base.Engine SELECT CAST('test unicode returns' AS VARCHAR(60)) AS anon_1\n",
+      "2021-06-25 05:45:17,295 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     }
    ],
@@ -638,7 +638,7 @@
     "WNBA = pd.read_pickle('WNBA')\n",
     "\n",
     "# instantiating engine\n",
-    "engine = create_engine('sqlite:///wnba.db', echo=True)\n",
+    "engine = create_engine('sqlite:///WNBASTATS.db', echo=True)\n",
     "\n",
     "# establishing connection to SQLite\n",
     "sqlite_connection = engine.connect()"
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "adopted-cartoon",
    "metadata": {},
    "outputs": [
@@ -654,11 +654,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-24 15:23:46,606 INFO sqlalchemy.engine.base.Engine PRAGMA main.table_info(\"AdvStatsW\")\n",
-      "2021-06-24 15:23:46,607 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:23:46,609 INFO sqlalchemy.engine.base.Engine PRAGMA temp.table_info(\"AdvStatsW\")\n",
-      "2021-06-24 15:23:46,610 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:23:46,615 INFO sqlalchemy.engine.base.Engine \n",
+      "2021-06-25 05:45:20,441 INFO sqlalchemy.engine.base.Engine PRAGMA main.table_info(\"AdvStatsW\")\n",
+      "2021-06-25 05:45:20,442 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:45:20,444 INFO sqlalchemy.engine.base.Engine PRAGMA temp.table_info(\"AdvStatsW\")\n",
+      "2021-06-25 05:45:20,445 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:45:20,448 INFO sqlalchemy.engine.base.Engine \n",
       "CREATE TABLE \"AdvStatsW\" (\n",
       "\tlevel_0 TEXT, \n",
       "\tlevel_1 TEXT, \n",
@@ -685,20 +685,20 @@
       ")\n",
       "\n",
       "\n",
-      "2021-06-24 15:23:46,616 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:23:46,618 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:23:46,619 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStatsW_level_1\" ON \"AdvStatsW\" (level_1)\n",
-      "2021-06-24 15:23:46,620 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:23:46,621 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:23:46,622 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStatsW_level_0\" ON \"AdvStatsW\" (level_0)\n",
-      "2021-06-24 15:23:46,623 INFO sqlalchemy.engine.base.Engine ()\n",
-      "2021-06-24 15:23:46,624 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:23:46,639 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
-      "2021-06-24 15:23:46,668 INFO sqlalchemy.engine.base.Engine INSERT INTO \"AdvStatsW\" (level_0, level_1, \"Team\", \"Age\", \"G\", \"MP\", \"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"BLK%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
-      "2021-06-24 15:23:46,669 INFO sqlalchemy.engine.base.Engine (('Farhiya Abdi', '2013', 'LAS', 21, 17, 122, 8.5, 0.429, 0.0, 0.308, 4.1, 7.3, 5.8, 11.2, 0.8, 0.6, 8.3, 17.9, 0.1, 0.1, 0.2, 0.065), ('Farhiya Abdi', '2014', 'LAS', 22, 17, 142, 5.7, 0.463, 0.159, 0.068, 2.6, 5.3, 3.9, 5.7, 0.4, 0.0, 11.7, 16.5, 0.0, 0.0, 0.0, -0.008), ('Farhiya Abdi', '2015', 'LAS', 23, 18, 237, 5.4, 0.42, 0.418, 0.089, 2.8, 12.4, 7.8, 6.5, 1.6, 0.7, 13.7, 19.6, -0.4, 0.1, -0.3, -0.055), ('Tajama Abraham', '1997', 'SAC', 21, 28, 422, 6.4, 0.427, 0.0, 0.302, 9.2, 10.8, 10.0, 6.0, 1.5, 2.3, 25.6, 20.3, -0.6, -0.2, -0.8, -0.092), ('Tajama Abraham', '1998', 'DET', 22, 12, 44, 8.2, 0.437, 0.0, 1.071, 5.4, 13.4, 9.4, 0.0, 2.5, 1.8, 19.5, 26.4, -0.1, 0.1, 0.0, -0.001), ('Svetlana Abrosimova', '2001', 'MIN', 20, 26, 846, 16.5, 0.491, 0.262, 0.449, 6.6, 19.6, 13.2, 16.4, 2.9, 0.9, 19.4, 25.4, 0.5, 1.4, 2.0, 0.111), ('Svetlana Abrosimova', '2002', 'MIN', 21, 27, 805, 12.6, 0.428, 0.19, 0.367, 7.9, 17.1, 12.5, 18.0, 3.1, 1.1, 20.0, 28.9, -1.6, 1.4, -0.2, -0.009), ('Svetlana Abrosimova', '2003', 'MIN', 22, 30, 792, 15.8, 0.485, 0.288, 0.344, 7.5, 15.9, 11.8, 20.8, 3.2, 1.2, 21.5, 25.7, 0.4, 1.1, 1.5, 0.091)  ... displaying 10 of 1616 total bound parameter sets ...  ('Tayler Hill', '2018', 'DAL', 27, 7, 118, 3.7, 0.381, 0.533, 0.044, 2.0, 4.9, 3.4, 9.1, 0.4, 0.7, 11.6, 18.9, -0.2, 0.0, -0.2, -0.094), ('Tayler Hill', '2019', 'DAL', 28, 4, 49, 9.9, 0.428, 0.462, 0.385, 4.6, 7.7, 6.1, 10.8, 1.1, 0.0, 0.0, 14.3, 0.1, 0.0, 0.1, 0.077))\n",
-      "2021-06-24 15:23:46,679 INFO sqlalchemy.engine.base.Engine COMMIT\n",
-      "2021-06-24 15:23:46,681 INFO sqlalchemy.engine.base.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
-      "2021-06-24 15:23:46,682 INFO sqlalchemy.engine.base.Engine ()\n"
+      "2021-06-25 05:45:20,449 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:45:20,451 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:45:20,452 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStatsW_level_1\" ON \"AdvStatsW\" (level_1)\n",
+      "2021-06-25 05:45:20,453 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:45:20,455 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:45:20,456 INFO sqlalchemy.engine.base.Engine CREATE INDEX \"ix_AdvStatsW_level_0\" ON \"AdvStatsW\" (level_0)\n",
+      "2021-06-25 05:45:20,456 INFO sqlalchemy.engine.base.Engine ()\n",
+      "2021-06-25 05:45:20,458 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:45:20,473 INFO sqlalchemy.engine.base.Engine BEGIN (implicit)\n",
+      "2021-06-25 05:45:20,508 INFO sqlalchemy.engine.base.Engine INSERT INTO \"AdvStatsW\" (level_0, level_1, \"Team\", \"Age\", \"G\", \"MP\", \"PER\", \"TS%\", \"3PAr\", \"FTr\", \"ORB%\", \"DRB%\", \"TRB%\", \"AST%\", \"STL%\", \"BLK%\", \"TOV%\", \"USG%\", \"OWS\", \"DWS\", \"WS\", \"WS/48\") VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+      "2021-06-25 05:45:20,508 INFO sqlalchemy.engine.base.Engine (('Farhiya Abdi', '2013', 'LAS', 21, 17, 122, 8.5, 0.429, 0.0, 0.308, 4.1, 7.3, 5.8, 11.2, 0.8, 0.6, 8.3, 17.9, 0.1, 0.1, 0.2, 0.065), ('Farhiya Abdi', '2014', 'LAS', 22, 17, 142, 5.7, 0.463, 0.159, 0.068, 2.6, 5.3, 3.9, 5.7, 0.4, 0.0, 11.7, 16.5, 0.0, 0.0, 0.0, -0.008), ('Farhiya Abdi', '2015', 'LAS', 23, 18, 237, 5.4, 0.42, 0.418, 0.089, 2.8, 12.4, 7.8, 6.5, 1.6, 0.7, 13.7, 19.6, -0.4, 0.1, -0.3, -0.055), ('Tajama Abraham', '1997', 'SAC', 21, 28, 422, 6.4, 0.427, 0.0, 0.302, 9.2, 10.8, 10.0, 6.0, 1.5, 2.3, 25.6, 20.3, -0.6, -0.2, -0.8, -0.092), ('Tajama Abraham', '1998', 'DET', 22, 12, 44, 8.2, 0.437, 0.0, 1.071, 5.4, 13.4, 9.4, 0.0, 2.5, 1.8, 19.5, 26.4, -0.1, 0.1, 0.0, -0.001), ('Svetlana Abrosimova', '2001', 'MIN', 20, 26, 846, 16.5, 0.491, 0.262, 0.449, 6.6, 19.6, 13.2, 16.4, 2.9, 0.9, 19.4, 25.4, 0.5, 1.4, 2.0, 0.111), ('Svetlana Abrosimova', '2002', 'MIN', 21, 27, 805, 12.6, 0.428, 0.19, 0.367, 7.9, 17.1, 12.5, 18.0, 3.1, 1.1, 20.0, 28.9, -1.6, 1.4, -0.2, -0.009), ('Svetlana Abrosimova', '2003', 'MIN', 22, 30, 792, 15.8, 0.485, 0.288, 0.344, 7.5, 15.9, 11.8, 20.8, 3.2, 1.2, 21.5, 25.7, 0.4, 1.1, 1.5, 0.091)  ... displaying 10 of 1616 total bound parameter sets ...  ('Tayler Hill', '2018', 'DAL', 27, 7, 118, 3.7, 0.381, 0.533, 0.044, 2.0, 4.9, 3.4, 9.1, 0.4, 0.7, 11.6, 18.9, -0.2, 0.0, -0.2, -0.094), ('Tayler Hill', '2019', 'DAL', 28, 4, 49, 9.9, 0.428, 0.462, 0.385, 4.6, 7.7, 6.1, 10.8, 1.1, 0.0, 0.0, 14.3, 0.1, 0.0, 0.1, 0.077))\n",
+      "2021-06-25 05:45:20,519 INFO sqlalchemy.engine.base.Engine COMMIT\n",
+      "2021-06-25 05:45:20,521 INFO sqlalchemy.engine.base.Engine SELECT name FROM sqlite_master WHERE type='table' ORDER BY name\n",
+      "2021-06-25 05:45:20,521 INFO sqlalchemy.engine.base.Engine ()\n"
      ]
     }
    ],
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "id": "blond-republican",
    "metadata": {},
    "outputs": [],
